--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
 
   flutter_switch: ^0.3.2
 
+  flutter_countdown_timer: ^4.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
